crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_passphrase_modal_set_default.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 20)"
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│                      No accounts. Press `a` to add one.                      │
│       ┌ Set passphrase ──────────────────────────────────────────────┐       │
│       │ Encrypts this vault under a new passphrase.                  │       │
│       │                                                              │       │
│       │ Passphrase:  [  ]                                            │       │
│       │ Confirm:     [  ]                                            │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                  Enter submit  ·  Esc cancel                 │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
