crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_passphrase_modal_set_save_not_committed.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│                      No accounts. Press `a` to add one.                      │
│       ┌ Set passphrase ──────────────────────────────────────────────┐       │
│       │ Encrypts this vault under a new passphrase.                  │       │
│       │                                                              │       │
│       │ Passphrase:  [  ]                                            │       │
│       │ Confirm:     [  ]                                            │       │
│       │                                                              │       │
│       │ save not committed (committed=false)                         │       │
│       │                                                              │       │
│       │                  Enter submit  ·  Esc cancel                 │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
