crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_remove_modal_save_durability_unconfirmed.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ██████░░░░   18s  ↪   255 062 │
│                                                                              │
│       ┌ Remove account ──────────────────────────────────────────────┐       │
│       │ Remove the following account?                                │       │
│       │                                                              │       │
│       │ GitHub:ben@example.com                                       │       │
│       │                                                              │       │
│       │ save durability unconfirmed                                  │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                Enter confirms  ·  Esc cancels                │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
